# catbar

./: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: 2  Cargo.toml  manifest.xml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  overlay.rs  win32.rs
src-tauri/src/app/: builder.rs  mod.rs  plugins.rs  tray.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/platform/windows/: mod.rs  overlay.rs  taskbar.rs  win32.rs
src-tauri/src/window/: builder.rs  mod.rs
src/components/: Tray.tsx  theme-provider.tsx
src/components/cat/: CatBehavior.tsx  CatInteractions.tsx  CatSprite.tsx
src/components/settings/: SettingsLayout.tsx  SettingsPanel.tsx  settings.config.ts
src/components/settings/categories/: FeaturesSettings.tsx  GeneralSettings.tsx  InterfaceSettings.tsx
src/features/main/: MainScreen.css  MainScreen.tsx
src/features/main/components/: FloatingControls.tsx  MainContent.tsx  MusicControls.tsx  PomodoroTimer.tsx
src/features/settings/: SettingsScreen.tsx
src/store/: catStore.ts  settings.sync.ts  settingsStore.ts
src/utils/: catAI.ts  system.ts
